force-app/main/default/objects/Contact/fields/Account_Accpac_Information__c.field-meta.xml
<CustomField>
    <fullName>Account_Accpac_Information__c</fullName>
    <formula>IF( ISBLANK(Account.AccPac_Account__c ) , Account.Name, Account.Name + &apos; (&apos; + Account.AccPac_Account__c + &apos;)&apos;)</formula>
    <label>Account Accpac Information</label>
    <type>Text</type>
</CustomField>