force-app/main/default/objects/Contact/fields/AccPac_Contact_ID__c.field-meta.xml
<CustomField>
    <fullName>AccPac_Contact_ID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>Contact ID from AccPac, do not delete the contents of this field.</inlineHelpText>
    <label>AccPac Contact ID</label>
    <length>40</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>