force-app/main/default/objects/Contact/fields/Add_to_Call_Block__c.field-meta.xml
<CustomField>
    <fullName>Add_to_Call_Block__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add to Call Block</label>
    <type>Checkbox</type>
</CustomField>