force-app/main/default/objects/Contact/fields/BMCServiceDesk__FKUrgency__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__FKUrgency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Urgency</label>
    <referenceTo>BMCServiceDesk__Urgency__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>