force-app/main/default/objects/Contact/fields/BMCServiceDesk__Level__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Secondary</fullName>
            </value>
            <value>
                <fullName>Tertiary</fullName>
            </value>
            <value>
                <fullName>Primary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>