force-app/main/default/objects/Contact/fields/CTCT2__Opted_Out_by_CTCT__c.field-meta.xml
<CustomField>
    <fullName>CTCT2__Opted_Out_by_CTCT__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If HasOptedOutOfEmail = true, this checkbox indicates whether the Opt Out originated in Salesforce or Constant Contact.</description>
    <label>Opted Out by Constant Contact</label>
    <type>Checkbox</type>
</CustomField>