force-app/main/default/objects/Contact/fields/Deferral_Period_Months__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Period_Months__c</fullName>
    <label>Deferral Period (Months)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>