force-app/main/default/objects/Contact/fields/Deferral_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Deferral_Start_Date__c</fullName>
    <label>Deferral Start Date</label>
    <type>Date</type>
</CustomField>