force-app/main/default/objects/Contact/fields/French__c.field-meta.xml
<CustomField>
    <fullName>French__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This contact prefers correspondence in French.</inlineHelpText>
    <label>French</label>
    <type>Checkbox</type>
</CustomField>