force-app/main/default/objects/Contact/fields/Main_Site_Contact__c.field-meta.xml
<CustomField>
    <fullName>Main_Site_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>On site contact</inlineHelpText>
    <label>Main Site Contact</label>
    <type>Checkbox</type>
</CustomField>