force-app/main/default/objects/Contact/fields/NPS_French_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>NPS_French_Survey_Link__c</fullName>
    <formula>&quot;https://www.getfeedback.com/r/Cn5Ost3V?ContactID=&quot;&amp;Id&amp;&quot;&amp;&quot;&amp;&quot;AccountID=&quot;&amp;Account.Id</formula>
    <inlineHelpText>URL to the French NPS survey and collecting the Contact and Account ID for survey association.</inlineHelpText>
    <label>NPS French Survey Link</label>
    <type>Text</type>
</CustomField>