force-app/main/default/objects/Contact/fields/ParentAccountName__c.field-meta.xml
<CustomField>
    <fullName>ParentAccountName__c</fullName>
    <description>Used for Deferral letter only</description>
    <formula>IF(Account.isParent__c, Account.Name, Account.Parent.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ParentAccountName</label>
    <type>Text</type>
</CustomField>