force-app/main/default/objects/Contact/fields/Post_Installation_Survey_Link__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_Survey_Link__c</fullName>
    <formula>&quot;https://www.getfeedback.com/r/jA3ESTUc?ContactID=&quot;&amp;Id&amp;&quot;&amp;&quot;&amp;&quot;AccountID=&quot;&amp;Related_Survey_Account__c</formula>
    <label>Post Installation Survey Link</label>
    <type>Text</type>
</CustomField>