force-app/main/default/objects/Contact/fields/Post_Installation_Survey_Link_French__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_Survey_Link_French__c</fullName>
    <formula>&quot;https://www.getfeedback.com/r/X9hNyzUv?ContactID=&quot;&amp;Id&amp;&quot;&amp;&quot;&amp;&quot;AccountID=&quot;&amp;Related_Survey_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Installation Survey Link French</label>
    <type>Text</type>
</CustomField>