force-app/main/default/objects/Contact/fields/Post_Installation_Survey_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Post_Installation_Survey_Sent_Date__c</fullName>
    <description>Populated via workflow field update when the Post Installation Survey was sent.</description>
    <label>Post Installation Survey Sent Date</label>
    <type>DateTime</type>
</CustomField>