force-app/main/default/objects/Contact/fields/Promotional_Offer_Emails__c.field-meta.xml
<CustomField>
    <fullName>Promotional_Offer_Emails__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Promotional Offer Emails</label>
    <type>Checkbox</type>
</CustomField>