force-app/main/default/objects/Contact/fields/Related_Account_Accpac_Number__c.field-meta.xml
<CustomField>
    <fullName>Related_Account_Accpac_Number__c</fullName>
    <formula>Account.AccPac_Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Related Account Accpac #</label>
    <type>Text</type>
</CustomField>