force-app/main/default/objects/Contact/fields/Related_Survey_Account__c.field-meta.xml
<CustomField>
    <fullName>Related_Survey_Account__c</fullName>
    <description>Updated via Apex to specify the Account ID the GetFeedback survey was related to.  Field is referenced within a GetFeedback URL via workflow email template to associate submitted surveys to an Account.</description>
    <label>Related Survey Account</label>
    <length>18</length>
    <type>Text</type>
</CustomField>