force-app/main/default/objects/Contact/fields/Report_Email_Bounce_Reason__c.field-meta.xml
<CustomField>
    <fullName>Report_Email_Bounce_Reason__c</fullName>
    <formula>HYPERLINK(&quot;#/sObject/00O3Z000004cIiYUAU/view?fv0=&quot;&amp; Id, &quot;Check Email Bounced Reason&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Only relevant if &quot;email bounced&quot; icon appears beside this contact&apos;s email address</inlineHelpText>
    <label>Report: Email Bounces</label>
    <type>Text</type>
</CustomField>