force-app/main/default/objects/Contact/fields/ringdna100__First_Inbound_Message__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__First_Inbound_Message__c</fullName>
    <label>First Inbound Message</label>
    <type>DateTime</type>
</CustomField>