force-app/main/default/objects/Contact/fields/ringdna100__Time_Since_Last_Message_Attempt_Days__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Time_Since_Last_Message_Attempt_Days__c</fullName>
    <formula>IF(ISBLANK(ringdna100__Last_Outbound_Message__c), NULL, (NOW() - ringdna100__Last_Outbound_Message__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Since Last Message Attempt (Days)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>