force-app/main/default/objects/Contact/fields/ringdna100__Time_to_First_Response__c.field-meta.xml
<CustomField>
    <fullName>ringdna100__Time_to_First_Response__c</fullName>
    <label>Time to First Response (Minutes)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>