force-app/main/default/objects/Contact/fields/ringdna__HasOptedOutOfSms__c.field-meta.xml
<CustomField>
    <fullName>ringdna__HasOptedOutOfSms__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Designates whether a lead has opt&apos;d out of SMS messages</description>
    <label>SMS Opt Out</label>
    <type>Checkbox</type>
</CustomField>