force-app/main/default/objects/Contact/fields/Send_Initial_NPS_Survey_2__c.field-meta.xml
<CustomField>
    <fullName>Send_Initial_NPS_Survey_2__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Select to distribute the initial NPS survey email to the Contact&apos;s email comprising of an embedded link to the GetFeedback NPS survey.  Created to not lose original list of survey recipients.</description>
    <label>Send Initial NPS Survey 2?</label>
    <type>Checkbox</type>
</CustomField>