force-app/main/default/objects/Contact/fields/Send_Initial_NPS_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Initial_NPS_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Select to distribute the initial NPS survey email to the Contact&apos;s email comprising of an embedded link to the GetFeedback NPS survey.</inlineHelpText>
    <label>Send Initial NPS Survey?</label>
    <type>Checkbox</type>
</CustomField>