force-app/main/default/objects/Contact/fields/Send_Post_Installation_Survey__c.field-meta.xml
<CustomField>
    <fullName>Send_Post_Installation_Survey__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Post Installation Survey?</label>
    <type>Checkbox</type>
</CustomField>