force-app/main/default/objects/Contact/listViews/Accounts_with_Contacts_Emails.listView-meta.xml
<ListView>
    <fullName>Accounts_with_Contacts_Emails</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>FULL_NAME</columns>
    <columns>CONTACT.PHONE1</columns>
    <columns>CONTACT.EMAIL</columns>
    <columns>CONTACT.TITLE</columns>
    <columns>CONTACT.EMAIL_OPT_OUT</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CONTACT.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CONTACT.EMAIL</field>
        <operation>notContain</operation>
    </filters>
    <label>Accounts with Contacts Emails</label>
</ListView>