force-app/main/default/objects/Contact/listViews/ringdna100__AllContacts.listView-meta.xml
<ListView>
    <fullName>ringdna100__AllContacts</fullName>
    <filterScope>Everything</filterScope>
    <label>All Contacts</label>
</ListView>