force-app/main/default/objects/Contact/listViews/ringdna100__MyContacts.listView-meta.xml
<ListView>
    <fullName>ringdna100__MyContacts</fullName>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>